<resources>
    <string name="app_name">Wisey</string>
    <string name="login">LOGIN</string>
    <string name="number_of_remaining_attempts">Number of remaining attempts:</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="mr_kushagra">Mr. Kushagra</string>
    <string name="sign_in_button">Sign Up</string>
    <string name="log_out">Log Out</string>
</resources>
